first payout details

--- a/src/_libStyle/colors.scss
+++ b/src/_libStyle/colors.scss
@@ -1,5 +1,9 @@
-$nav-red: #E70012;
-$dark-nav-blue: #3F3E45;
+$bg-red-light: #E70012;
+$bg-red-dark: #980000;
+$bg-nav-blue: #3F3E45;
+$bg-dark-blue: #24232c;
 
 $dark-black-font: #2f2e36;
 $dark-blue-font: #2f2860;
+
+$button-hover-yellow: #ff9800;
