--- a/src/organism/navbar/style.scss
+++ b/src/organism/navbar/style.scss
@@ -38,7 +38,8 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        background-color: #3F3E45;
+        background-color: #980000;
+        //background-color: #3F3E45;
         padding-right: 20px;
 
         .clip {
