--- a/src/pages/home/cardA/style.scss
+++ b/src/pages/home/cardA/style.scss
@@ -19,7 +19,8 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            width: 650px;
+            width: 450px;
+            max-width: calc(100% - 40px);
             height: calc(100% - 90px);
             margin: 0 auto;
             
@@ -28,7 +29,7 @@
             font-weight: normal;
             font-size: 45px;
             color: #2f2e36;
-            line-height: 45px;
+            line-height: 50px;
             text-shadow: 3px 4px 5px #919191;
 
             & strong {
@@ -92,3 +93,17 @@
 
 
 }
+
+
+@media only screen and (min-width: 1000px) {
+    .carrossel { 
+        .bgHoverAll {
+            .mega-title {
+                width: 650px;
+                font-size: 45px;
+            }
+        }
+  }
+}
+  
+    
