--- a/src/templates/publicPage/style.scss
+++ b/src/templates/publicPage/style.scss
@@ -1,19 +1,34 @@
 .container {
     display: grid; 
-    grid-template-columns: 1fr 1fr 1fr; 
-    grid-template-rows: 1fr 1fr 1fr; 
+    grid-template-columns: 1fr; 
+    grid-template-rows: 2fr 1fr 1fr; 
     gap: 0px 0px; 
     grid-template-areas: 
-      "carrossel carrossel top"
-      "carrossel carrossel top"
-      "btn1 btn2 btn3"; 
+      "carrossel"
+      "user-area"
+      "btnArea"; 
     
     background-color: #2F2E36;
     width: 100%;
     height: calc(100% - 50px);
+
+    .carrossel { grid-area: carrossel; }
+    .user-area { grid-area: user-area; }
+    .btnArea { grid-area: btnArea; }
+}
+
+
+@media only screen and (min-width: 1000px) {
+  .container { 
+    display: grid; 
+    grid-template-columns: 2fr 1fr; 
+    grid-template-rows: 1fr 1fr 1fr; 
+    gap: 0px 0px; 
+    grid-template-areas: 
+      "carrossel  user-area"
+      "carrossel  user-area"
+      "btnArea btnArea"; 
   }
-  .carrossel { grid-area: carrossel; }
-  .top { grid-area: top; }
-  .btn1 { grid-area: btn1; }
-  .btn2 { grid-area: btn2; }
-  .btn3 { grid-area: btn3; }
+}
+
+  
