returning to previus

--- a/src/pages/home/cardC/style.scss
+++ b/src/pages/home/cardC/style.scss
@@ -31,7 +31,7 @@
         padding: 0 25px;
         flex-wrap: wrap;
 
-        a {
+        .button-home {
             width: 294px;
             height: 141px;
             display: flex;
