nintendo api first pt

--- a/src/pages/home/cardC/style.scss
+++ b/src/pages/home/cardC/style.scss
@@ -1,6 +1,6 @@
 .btnArea {
     padding: 0 25px;
-    background-image: linear-gradient(#efefef, #efefef , #cbcbcb);
+    background-image: linear-gradient(#24232c, #24232c, #3a3939);
 
     .car-divisor {
         display: flex;
